# BiodiversityASSET

./: .gitignore  BATCH_WORKFLOW.md  README.md  REFACTORING_SUMMARY.md  find_missing_indices.py  pyproject.toml
prompts/: assetization_features_scoring_system_prompt.txt  investment_activity_classification_system_prompt.txt  user_prompt_template.txt
scripts/: batch_api_utils.py  check_batch_status.py  check_duplicates_paragraphs.py  download_batch_results.py  evaluate_labels.py  extract_pdfs.py  filter_biodiversity_paragraphs.py  processing_results.py  submit_batch_job.py
